--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: advanced_list_view
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+repository: https://github.com/aminJamali/advanced-list-view
 
 environment:
   sdk: ">=2.17.5 <3.0.0"
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+
 
 dev_dependencies:
   flutter_test:
